@@ -25,5 +25,6 @@
 bool z80notUsed(const char *what, lineNode *endPl, lineNode *head);
 bool z80notUsedFrom(const char *what, const char *label, lineNode *head);
 bool z80canAssign (const char *dst, const char *src, const char *exotic);
+bool z80symmParmStack (void);
 int z80instructionSize(lineNode *node);
 
