@@ -1,3 +1,14 @@
+2015-04-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c,
+	  src/port.h,
+	  src/z80/main.c,
+	  src/z80/gen.c,
+	  src/z80/peep.h,
+	  src/z80/peep.c,
+	  src/z80/peeph-z80.def:
+	  Fix peephole optimizer bug #2374, more efficient calls to _Noreturn functions.
+
 2015-04-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
